[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiffGSP"
version = "0.1.0"
description = "A spatial transcriptomics tool for addressing transcript diffusion based on Fick's law graph signal processing."
authors = [
  { name = "Shuli Sun", email = "shuli.sun@qq.com" },
  { name = "Jixin Liu", email = "frankliu210@163.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "pandas==2.0.3",
  "scipy==1.10.1",
  "scikit-learn==1.3.2",
  "tqdm==4.66.4",
  "matplotlib==3.7.5",
  "leidenalg==0.10.2",
  "ipython==8.12.3",
  "kneed==0.8.5",
  "scanpy==1.9.8"
]

[tool.setuptools.packages.find]
where = ["DiffGSP"]
